--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "lodash": "^4.17.21"
   },
   "devDependencies": {
+    "@types/http-proxy": "^1.17.7",
+    "@types/lodash": "^4.14.172",
     "@types/node": "^14.11.2",
     "gts": "^3.1.0",
     "nodemon": "^2.0.12",
