--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@polkadot/api": "^5.6.1",
     "dotenv": "^10.0.0",
     "http-proxy": "^1.18.1",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "web3-eth-accounts": "^1.5.2"
   },
   "devDependencies": {
     "@types/http-proxy": "^1.17.7",
