--- a/package.json
+++ b/package.json
@@ -22,12 +22,16 @@
   },
   "dependencies": {
     "@polkadot/api": "^5.6.1",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "express": "^4.17.1",
     "http-proxy": "^1.18.1",
     "lodash": "^4.17.21",
     "web3-eth-accounts": "^1.5.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
     "@types/http-proxy": "^1.17.7",
     "@types/lodash": "^4.14.172",
     "@types/node": "^14.11.2",
