--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
   },
   "dependencies": {
     "@polkadot/api": "^5.6.1",
+    "bs58": "^4.0.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "http-proxy": "^1.18.1",
     "lodash": "^4.17.21",
+    "tweetnacl": "^1.0.3",
     "web3-eth-accounts": "^1.5.2"
   },
   "devDependencies": {
@@ -39,5 +41,8 @@
     "nodemon": "^2.0.12",
     "ts-node": "^10.2.1",
     "typescript": "^4.0.3"
+  },
+  "engines": {
+    "node": ">=11.0.0"
   }
 }
