--- a/package.json
+++ b/package.json
@@ -22,12 +22,18 @@
   },
   "dependencies": {
     "@polkadot/api": "^5.6.1",
+    "bs58": "^4.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "express": "^4.17.1",
     "http-proxy": "^1.18.1",
     "lodash": "^4.17.21",
+    "tweetnacl": "^1.0.3",
     "web3-eth-accounts": "^1.5.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
     "@types/http-proxy": "^1.17.7",
     "@types/lodash": "^4.14.172",
     "@types/node": "^14.11.2",
@@ -35,5 +41,8 @@
     "nodemon": "^2.0.12",
     "ts-node": "^10.2.1",
     "typescript": "^4.0.3"
+  },
+  "engines": {
+    "node": ">=11.0.0"
   }
 }
