--- a/package.json
+++ b/package.json
@@ -21,17 +21,18 @@
     "posttest": "yarn run lint"
   },
   "dependencies": {
+    "@crustio/auth-handler": "file:../crust.js/packages/ipfs-w3auth/auth-handler/build",
     "@polkadot/api": "^5.9.1",
+    "avalanche": "3.8.1",
     "bs58": "^4.0.1",
     "cors": "^2.8.5",
+    "create-hash": "1.2.0",
     "dotenv": "^10.0.0",
     "ethers": "^5.4.6",
     "express": "^4.17.1",
     "http-proxy": "^1.18.1",
     "lodash": "^4.17.21",
-    "tweetnacl": "^1.0.3",
-    "create-hash": "1.2.0",
-    "avalanche": "3.8.1"
+    "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
