use public package

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "posttest": "yarn run lint"
   },
   "dependencies": {
-    "@crustio/auth-handler": "file:../crust.js/packages/ipfs-w3auth/auth-handler/build",
+    "@crustio/ipfs-w3auth-handler": "0.0.1",
     "@polkadot/api": "^5.9.1",
     "avalanche": "3.8.1",
     "bs58": "^4.0.1",
